src/core/workerbase_p.h
@@ -163,7 +163,7 @@ public:
 
     void special(const QByteArray &data) final
     {
-        finalize(base->special(data));
+        maybeError(base->special(data));
     }
 
     void multiGet(const QByteArray &data) final
